--- a/.github/workflows/coverity.yml
+++ b/.github/workflows/coverity.yml
@@ -70,7 +70,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Download Windows 64 Coverity Tool
         run: |
-          curl https://scan.coverity.com/download/cxx/win64 -o ${GITHUB_WORKSPACE}/cov-win64-tool.zip -d "token=${{secrets.COVERITY_TOKEN}}&project=${{env.COVERITY_PROJECT}}"
+          curl https://scan.coverity.com/download/cxx/win64 -o cov-win64-tool.zip -d "token=${{secrets.COVERITY_TOKEN}}&project=${{env.COVERITY_PROJECT}}"
           mkdir cov-win64-tool
           7z x cov-win64-tool.zip
           move cov-win64-tool* cov-win64-tool
